@@ -1,3 +1,9 @@
+2006-03-25  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXDraw.c (TkMacOSXSetUpCGContext): 
+	* macosx/tkMacOSXFont.c (TkMacOSXQuarzStartDraw, TkMacOSXQuarzEndDraw):
+	performance improvements, sync similar code, formatting & whitespace.
+
 2006-03-24  Daniel Steffen  <das@users.sourceforge.net>
 
 	* generic/tkTextDisp.c:   moved #ifdef MAC_OSX_TK code added by
